fix(footer): sidebar was not visible due scrolling

--- a/blog/.vuepress/theme/styles/index.styl
+++ b/blog/.vuepress/theme/styles/index.styl
@@ -153,7 +153,7 @@ th, td
   background-color $queenLightest
   width $sidebarWidth
   position fixed
-  z-index 10
+  z-index 20
   margin 0
   top $navbarHeight
   left 0
